longer homepage intro text
with more space made for it in the pretty hacky CSS

--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -11,8 +11,8 @@
     <div class="col-xs-12 col-md-5">
       <div class="row search-container">
         <div class="digital-description col-xs-12 col-sm-6 col-md-12">
-          <h2>Digital Collections</h2>
-          <p>Search a growing selection of our digitized materials in the history of science: artifacts, photographs, advertisements, manuscripts, letters, books, and more.</p>
+          <h2 class="brand-alt-h2">Digital Collections</h2>
+          <p>Search over 4,000 digitized items from the Chemical Heritage Foundation: artifacts, photographs, advertisements, letters, rare books, and more. You can also learn more about the rest of our <a href="https://www.chemheritage.org/collections">collections.</a></p>
         </div>
         <div class="search-callouts col-xs-12 col-sm-6 col-md-12">
           <%= render 'catalog/search_form' %>
