--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -4,7 +4,6 @@
   padding-right: 0;
   padding-bottom: 0 !important; /* overcome id-based css */
 
-  .search-container,
   .featured-collection-callouts {
     padding-bottom: 30px;
   }
@@ -35,6 +34,10 @@
   .search-container {
     padding-left: 5px;
     padding-right: 5px;
+    @media (max-width: $screen-md-min - 1) {
+      padding-bottom: 30px;
+    }
+
     @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
       margin-top: 30px;
     }
@@ -42,6 +45,9 @@
       margin: 30px 20px 0;
     }
     @media (min-width: $screen-md-min) {
+      margin: 10% 15% 0 8%;
+    }
+    @media (min-width: $screen-lg-min) {
       margin: 20% 15% 0 8%;
     }
   }
