--- a/app/assets/stylesheets/local/collections.scss
+++ b/app/assets/stylesheets/local/collections.scss
@@ -38,6 +38,10 @@ $collection-index-box-margin: 17px;
           text-align: center;
         }
       }
+
+      p {
+        line-height: normal;
+      }
     }
 
     /* A 0-height box that spaces out columns to left-align items in
