--- a/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
@@ -24,8 +24,8 @@
         <i class="fa fa-download"></i> <span class="viewer-navbar-label">Download</span>
       </button>
 
-      <%= member_download_menu nil, parent: work %>
-
+      <ul class="dropdown-menu" role="menu">
+      </ul>
     </div>
 
     <button class="viewer-navbar-btn btn btn-lg btn-primary viewer-fullscreen viewer-thin-btn" id="viewer-fullscreen" data-trigger="viewer-fullscreen" tabindex="0" title="Fullscreen">
