--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -20,7 +20,7 @@
     contents and have CSS properties relevant to that too.
 */
 
-$chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUMB_WIDTH
+$chf_image_viewer_thumb_width: 54px; // Needs to match ImageServiceHelper::THUMB_BASE_WIDHTS[:mini]
 
 // Override some bootstrap modal stuff to give us a full-viewport modal
 #chf-image-viewer-modal {
@@ -283,6 +283,7 @@ $chf_image_viewer_thumb_width: 60px; // Needs to match MemberHelper::VIEWER_THUM
     .viewer-thumb-img {
       display: inline-block; // makes FF respect width on unloaded image, not sure why needed
       max-height: 80px;
+      box-sizing: content-box;
       width: $chf_image_viewer_thumb_width;
 
       cursor: pointer;
