derivatives download menu, consistent and well-styled, with analytics tags, for new system

--- a/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
@@ -24,7 +24,7 @@
         <i class="fa fa-download"></i> <span class="viewer-navbar-label">Download</span>
       </button>
 
-      <ul class="dropdown-menu" role="menu">
+      <ul class="dropdown-menu download-menu" role="menu">
       </ul>
     </div>
 
