--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -124,3 +124,16 @@ hr.brand {
   // }
 
 }
+
+.download-menu {
+  .dropdown-header {
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 0.03em;
+  }
+  li small {
+    color: $text-muted;
+    margin-left: 8px;
+    font-weight: 100;
+  }
+}
