no need to override show_page_representative_media, we just don't use it at all in our custom pages anymore

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -51,7 +51,7 @@
   </div>
 
   <div class="show-representative">
-      <%= show_page_representative_media(@presenter) %>
+      <%= render 'show_page_image', member: @presenter.representative_presenter, size: :large %>
       <div class="rights-and-social">
         <% if @presenter.has_rights_statement? %>
             <%= link_to @presenter.rights_url, target: "_blank", class: 'rights-statement large' do %>
