Human-friendlier download file names in 'save as'
We wanted to include the 'index' number (page X of total) in the name, for
even more friendliness and sorting right locally, but was too much of a pain
to get and track that with current architecture.

This architecture is def getting a bit sprawling, those :small :medium :large
magic key names are a bit non-ideal, but it's what we've got for now.

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -40,7 +40,7 @@
           <%# less space for admin, just use icon %>
           <i class='fa fa-download'></i> Download
         </button>
-        <%= member_download_menu(member, parent: @presenter, labelled_by: "dropdownMenu_downloads_#{member.id}") %>
+        <%= member_download_menu(member, parent: @presenter, labelled_by: "dropdownMenu_downloads_#{member.id}", filename_base: _download_name_base(@presenter, item_id: member.id)) %>
       </div>
     <% end %>
 
@@ -52,13 +52,12 @@
       </div>
     <% end %>
 
-
     <% if (member.model_name.singular.to_sym == :file_set) && current_ability.current_user.staff? %>
       <div class="btn-group dropup">
         <button class="btn btn-brand-alt dropdown-toggle" data-toggle="dropdown" type="button" id="dropdownMenu_actions_<%= member.id %>" aria-haspopup="true">
           <i class='fa fa-cog'></i>  Admin
         </button>
-        <%= file_set_actions_menu(member, parent: @presenter, labelled_by: "dropdownMenu_actions_#{member.id}" ) %>
+        <%= file_set_actions_menu(member, parent: @presenter, labelled_by: "dropdownMenu_actions_#{member.id}") %>
       </div>
     <% elsif member.model_name.singular.to_sym != :file_set %>
       <%= link_to  contextual_path(member, @presenter), class: "btn btn-brand-alt show-page-image-info" do %>
