rights statement back on viewer download menu
a bit hacky, leaving this in the DOM as HTML for JS to get. But it works.

member_helper and image_service_helper are getting expansive, would be good
to refactor into something other than a mess of helper methods, some kind
of OO. But tricky and good enough for now.

--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -37,6 +37,16 @@
               <%= render "chf_image_viewer_navbar", work: work %>
             </div>
 
+            <%# just some DOM content that the viewer.js will copy into download
+                menus, we use same rights statement for all members, filesets don't
+                even have rights data, so. would probably be better to commicate
+                this some way other than DOM. %>
+            <% if work.rights_url %>
+              <div style="display: none" class="parent-rights-inline">
+                <%= render_rights_statement(work) %>
+              </div>
+            <% end %>
+
             <%# will be filled by JS, from json endpoint data %>
             <%= content_tag "div", "", id:"viewer-thumbs", class: "viewer-thumbs", data: { total_count: work.viewable_member_presenters.count } %>
           </div>
