--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -34,7 +34,9 @@
       </div>
   <% end %>
   <div class="show-page-image-bar">
-    <% if (member.model_name.singular.to_sym == :file_set) && can?(:read, member.id) %>
+    <%# this used to check for '&& can?(:read, member.id)', but that was kind of expensive,
+        and in our app if you can see it you can download %>
+    <% if member.model_name.singular.to_sym == :file_set %>
       <div class="btn-group dropup">
         <button type="button" class="btn btn-brand-alt dropdown-toggle" id="dropdownMenu_downloads_<%= member.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%# less space for admin, just use icon %>
