--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -19,7 +19,7 @@
     <div class="chf-results-list-item-thumb">
       <%# render_thumbnail_tag generic_work %>
       <%= link_to generic_work do %>
-        <%= tag "img", member_src_attributes(member: doc_presenter, size_key: :standard) %>
+        <%= tag "img", member_src_attributes(member: doc_presenter, size_key: :standard).merge(alt: "") %>
       <% end %>
       <%= doc_presenter.render_num_members %>
     </div>
