CSS fix to our potentially larger representative_media in admin screens

--- a/app/assets/stylesheets/chf-overrides.css.scss
+++ b/app/assets/stylesheets/chf-overrides.css.scss
@@ -39,3 +39,8 @@
 .representative-media {
   display: inline !important;
 }
+
+// make sure our larger thumbs don't overflow
+img.representative-media {
+  max-width: 100%;
+}
