Smaller front-page hero
With changes and crazy arithmatic to try to keep whitespace and alignment looking good at all
screen sizes.

Ref #761

--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -4,11 +4,11 @@
 <div class="homepage-wrapper">
 
   <div class="row hero-search-container no-gutters">
-    <figure class="hero-image col-xs-12 col-md-7">
+    <figure class="hero-image col-xs-12 col-md-6">
       <%= image_tag "hero_image_2x.jpg", alt: "" %>
       <figcaption><%= hero_link('w6634363x') %></figcaptionw>
     </figure>
-    <div class="col-xs-12 col-md-5">
+    <div class="col-xs-12 col-md-6 home-right-column">
       <div class="row search-container">
         <div class="digital-description col-xs-12 col-sm-6 col-md-12">
           <div class="pre-heading">Chemical Heritage Foundation</div>
