--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -48,21 +48,30 @@
   .search-container {
     padding-left: 5px;
     padding-right: 5px;
-    @media (max-width: $screen-md-min - 1) {
-      padding-bottom: 30px;
-    }
+  }
 
-    @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
-      margin-top: 30px;
-    }
-    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-      margin: 30px 20px 0;
-    }
-    @media (min-width: $screen-md-min) {
-      margin: 10% 15% 0 8%;
-    }
-    @media (min-width: $screen-lg-min) {
-      margin: 20% 15% 0 8%;
+   @media (min-width: $screen-md-min) {
+    .home-right-column {
+      // crazy way to keep .search-container vertically centered
+      $hero-aspect-ratio: 1.366; // w divided by height of hero image in left column
+      // width of hero image (col-md-5) is 6/12. Make that expressed in vw, for screen width.
+      // Then Divided by aspect ratio is it's height.
+      // make this height the same. But account for ~20px scrollbar on some browser/OS.
+      height: calc(((600vw / 12) - 20px) / #{$hero-aspect-ratio});
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .search-container {
+        max-width: 38em; // keep the lines from going too long on big screens
+        min-height: 70%;
+        // and then center it.
+        margin-left: auto;
+        margin-right: auto;
+        .pre-heading  {
+          margin-top: 0;
+        }
+      }
     }
   }
 
