Use child work as representative presenter on show page
Not it's ultimate representative fileset. Our architectural changes mean it can already handle
this just fine. It allows us to provide the 'info' button for child work even in representative
position, while still providing download button for actual fileset (when in representative position).

All this is getting convoluted, it's hard to figure out UI for generic child work situation.

Closes #897

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -36,7 +36,7 @@
   <div class="show-page-image-bar">
     <%# this used to check for '&& can?(:read, member.id)', but that was kind of expensive,
         and in our app if you can see it you can download %>
-    <% if member.model_name.singular.to_sym == :file_set %>
+    <% if local_assigns[:size].to_s == "large" || member.model_name.singular.to_sym == :file_set %>
       <div class="btn-group dropup">
         <button type="button" class="btn btn-brand-alt dropdown-toggle" id="dropdownMenu_downloads_<%= member.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%# less space for admin, just use icon %>
