make social share buttons circles

--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -96,6 +96,7 @@ hr.brand {
   align-items: center;
   justify-content: center;
 
+  border-radius: 50%; // make circles
 
   height: 38px;
   width: 38px;
