extract social media accts in footer to config variables

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -18,13 +18,13 @@
 
   <div class="footerrow">
     <div class="footersocialicons">
-      <div class="footersocialicon"><a href="https://www.facebook.com/ChemHeritage" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></div>
-      <div class="footersocialicon"><a href="https://twitter.com/chemheritage" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
-      <div class="footersocialicon"><a href="https://vimeo.com/chemheritage" target="_blank"><i class="fa fa-vimeo" aria-hidden="true"></i></a></div>
-      <div class="footersocialicon"><a href="https://www.youtube.com/c/chemheritageorg" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></div>
-            <div class="footersocialicon"><a href="https://www.linkedin.com/company/chemical-heritage-foundation" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
-      <div class="footersocialicon"><a href="https://www.pinterest.com/chemheritage/" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></div>
-      <div class="footersocialicon"><a href="https://www.instagram.com/chemheritage" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://www.facebook.com/<%= Rails.application.config.facebook_acct %>" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://twitter.com/<%= Rails.application.config.twitter_acct %>" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://vimeo.com/<%= Rails.application.config.vimeo_acct %>" target="_blank"><i class="fa fa-vimeo" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://www.youtube.com/c/<%= Rails.application.config.youtube_channel %>" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://www.linkedin.com/company/<%= Rails.application.config.linked_in_company %>" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://www.pinterest.com/<%= Rails.application.config.pinterest_acct %>/" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a></div>
+      <div class="footersocialicon"><a href="https://www.instagram.com/<%= Rails.application.config.instagram_acct %>" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
     </div>
   </div>
 </footer>
