--- a/app/views/curation_concerns/base/_chf_meta_tags.html.erb
+++ b/app/views/curation_concerns/base/_chf_meta_tags.html.erb
@@ -14,11 +14,12 @@
 <meta property="og:image" content="<%= social_media_share_image_medium(presenter) %>"/>
 <%# we know we're delivering a JPG %>
 <meta property="og:image:type" content="image/jpeg" />
-<%# we know it's width %>
-<meta property="og:image:width" content="<%= ImageServiceHelper::DOWNLOAD_WIDTHS[:medium] %>" />
-<%# and can calculate it's height based on aspect ratio since it's just a resize %>
-<meta property="og:image:height" content="<%= ImageServiceHelper::DOWNLOAD_WIDTHS[:medium] * presenter.representative_height / presenter.representative_width %>" />
 
+<% if presenter.representative_height && presenter.representative_width %>
+  <meta property="og:image:width" content="<%= ImageServiceHelper::DOWNLOAD_WIDTHS[:medium] %>" />
+  <%# and can calculate it's height based on aspect ratio since it's just a resize %>
+  <meta property="og:image:height" content="<%= ImageServiceHelper::DOWNLOAD_WIDTHS[:medium] * presenter.representative_height / presenter.representative_width %>" />
+<% end %>
 
 <meta property="og:url" content="<%= polymorphic_url([main_app, presenter]) %>"/>
 
