--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -71,7 +71,7 @@
               if there's no rights %>
           <div class="rights-placeholder"></div>
         <% end %>
-        <%= render 'social_media' %>
+        <%= render 'social_media', presenter: @presenter %>
       </div>
   </div>
 
