--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -114,7 +114,7 @@
     }
     .top-panel-heading {
       margin: 0;
-      background-color: $dark-navy;
+      background-color: $brand-dark-blue;
       color: $bg-lightly-shaded;
       text-transform: uppercase;
       h2.facets-heading {
@@ -142,7 +142,7 @@
       font-weight: $semi-bold-weight;
       font-size: .8em;
       letter-spacing: 0.03em;
-      color: $dark-navy;
+      color: $brand-dark-blue;
     }
 
     // get 'limit' button all on one line by making inputs more compact
