new btn-emphasis class, use for search go button, green rebrand color

--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -9,7 +9,7 @@
     <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
 
     <div class="input-group-btn">
-      <button type="submit" class="btn btn-primary" id="search-submit-header">
+      <button type="submit" class="btn btn-emphasis" id="search-submit-header">
         <%= t('sufia.search.button.html') %>
       </button>
       <%# CHF edit to hide search dropdown for non-staff users %>
